# smart-deals

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt  start_backend.sh  vite.config.js
attached_assets/: Pasted-Enhance-the-existing-group-buying-marketplace-Python-ba_1776234724181.txt  Pasted-Transform-the-existing-peer-to-peer-bidding-marketplace_1776202618039.txt
backend/: auth.py  database.py  main.py  seed.py  seed_bulk.py  test_concurrency.py
backend/routers/: admin.py  auth_router.py  bids.py  cart.py  deals.py  notifications.py  orders.py  products.py  push.py  reports.py  search.py
backend/services/: payment_service.py  pdf_service.py  push_service.py
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  checkout.tsx
mobile/app/(auth)/: login.tsx  signup.tsx
mobile/app/(consumer)/: _layout.tsx  cart.tsx  deals.tsx  index.tsx  orders.tsx  profile.tsx
mobile/app/(supplier)/: _layout.tsx  dashboard.tsx  deals.tsx  index.tsx  orders.tsx  products.tsx
mobile/app/deal/: [id].tsx
mobile/app/order/: [id].tsx
mobile/components/: Avatar.tsx  Badge.tsx  BottomSheet.tsx  DealCard.tsx  NotificationBadge.tsx  index.ts  ui.tsx
mobile/constants/: colors.ts
mobile/hooks/: useAuth.tsx  useColors.ts
mobile/services/: api.ts
mobile/types/: models.ts
src/auth/Login/: Login.jsx
src/auth/SignUp/: SignUp.jsx
src/context/: AuthProvider.jsx
src/hooks/: useAxios.jsx  useCountdown.js
src/layout/: MainLayout.jsx
src/routes/: routes.jsx
(+23 files in other folders)
